--- a/code_and_analysis.ipynb
+++ b/code_and_analysis.ipynb
@@ -68,7 +68,7 @@
     "# Split the dataset into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.4, random_state=42)\n",
     "\n",
-    "# Apply Logistic Regression\n",
+    "# Logistic Regression\n",
     "model = LogisticRegression()\n",
     "model.fit(X_train, y_train)\n",
     "\n",
@@ -374,7 +374,6 @@
     "    # Predicted probabilities\n",
     "    y_prob = model.predict_proba(X_test)  # shape (n_samples, n_classes)\n",
     "    \n",
-    "    # Create a scatter plot\n",
     "    plt.figure(figsize=(8, 6))\n",
     "    sns.scatterplot(x=X_test[feature], y=y_prob[:, 1], hue=y_test)\n",
     "    \n",
@@ -421,7 +420,6 @@
     }
    ],
    "source": [
-    "# Load the dataset\n",
     "data = pd.read_csv('2025-VeloCityX-Expanded-Fan-Engagement-Data.csv')\n",
     "\n",
     "features = ['Fan Challenges Completed', 'Predictive Accuracy (%)', \n",
@@ -436,7 +434,7 @@
     "\n",
     "df = data[features]\n",
     "\n",
-    "# Calculate pairwise correlations using Pearson correlation coefficient\n",
+    "# Pearson correlation coefficient\n",
     "correlation_matrix = df.corr()\n",
     "\n",
     "print(\"Correlation between 'Virtual Merchandise Purchases' and other activities:\")\n",
@@ -540,7 +538,6 @@
     }
    ],
    "source": [
-    "# Plot the heatmap\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', vmin=-1, vmax=1)\n",
     "plt.title('Correlation Heatmap of User Activities, Purchases, and Sponsorship Interaction')\n",
@@ -577,10 +574,8 @@
     "# - Correlation between Real-Time Chat Activity (Messages Sent) and Purchased Merchandise: -0.045 (p-value: 0.6589)\n",
     "# - Correlation between Sponsorship Interactions (Ad Clicks) and Purchased Merchandise: 0.071 (p-value: 0.4855)\n",
     "\n",
-    "# Load the dataset\n",
     "data = pd.read_csv('2025-VeloCityX-Expanded-Fan-Engagement-Data.csv')\n",
     "\n",
-    "# List of user activities\n",
     "activities = [\n",
     "    'Fan Challenges Completed',\n",
     "    'Predictive Accuracy (%)',\n",
@@ -589,7 +584,6 @@
     "    'Sponsorship Interactions (Ad Clicks)'\n",
     "]\n",
     "\n",
-    "# Create separate scatter plots with best fit lines\n",
     "plt.figure(figsize=(18, 10))\n",
     "for i, activity in enumerate(activities, 1):\n",
     "    plt.subplot(2, 3, i)\n",
@@ -633,10 +627,8 @@
     "# - Correlation between Real-Time Chat Activity (Messages Sent) and Sponsorship Interactions: 0.191 (p-value: 0.0566)\n",
     "# - Correlation between Virtual Merchandise Purchases and Sponsorship Interactions: 0.071 (p-value: 0.4855)\n",
     "\n",
-    "# Load the dataset\n",
     "data = pd.read_csv('2025-VeloCityX-Expanded-Fan-Engagement-Data.csv')\n",
     "\n",
-    "# List of user activities\n",
     "activities = [\n",
     "    'Fan Challenges Completed',\n",
     "    'Predictive Accuracy (%)',\n",
@@ -645,7 +637,6 @@
     "    'Virtual Merchandise Purchases'\n",
     "]\n",
     "\n",
-    "# Create separate scatter plots with best fit lines\n",
     "plt.figure(figsize=(18, 10))\n",
     "for i, activity in enumerate(activities, 1):\n",
     "    plt.subplot(2, 3, i)\n",
